samples/_failures_safe/1761345153_e2282e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98f9b683.c: In function ‘print_high_severity_entries’:
./samples/SAFE/__tmp_98f9b683.c:150:5: error: expected declaration or statement at end of input
  150 |     int found = 0;
      |     ^~~
